# zephyr-nrfconnect-dockerized-vscode-template

./: README.md  platform.resc
app/: CMakeLists.txt  prj.conf
app/.cache/clangd/index/: adder.c.2F31C0508C671A28.idx  adder.h.5067EACEB1B6E035.idx  main.c.7C1C6E826EB4B6D6.idx
app/src/: main.c
app/src/example/: CMakeLists.txt  adder.c  adder.h
tests/example/: CMakeLists.txt  prj.conf  testcase.yaml
tests/example/src/: example_test.c
utils/: debug_command.sh  run_unittests.sh
